[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/BaseofLeftAndRight.gd" type="Script" id=1]
[ext_resource path="res://assets/text/Kenney Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/labelPiece.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/simpleInstructions.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/buttonsStyle/pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/buttonsStyle/normal.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/buttonsStyle/hover.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/buttonsStyle/diabled.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="BaseofLeftAndRight" type="VBoxContainer"]
margin_right = 612.0
margin_bottom = 660.0
rect_min_size = Vector2( 600, 500 )
custom_constants/separation = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 612.0
margin_bottom = 322.0
rect_min_size = Vector2( 600, 320 )
alignment = 1

[node name="prosOfXY" type="Label" parent="VBoxContainer"]
margin_right = 612.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pros of X"
align = 1
valign = 2
clip_text = true

[node name="simpleInstructions" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 40.0
margin_bottom = 58.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 612.0
margin_bottom = 322.0
rect_min_size = Vector2( 600, 260 )
scroll_horizontal_enabled = false

[node name="prosList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 600.0
margin_bottom = 250.0
rect_min_size = Vector2( 600, 250 )

[node name="labelPiece" parent="VBoxContainer/ScrollContainer/prosList" instance=ExtResource( 3 )]
margin_bottom = 32.0

[node name="addMoreBtnPros" type="Button" parent="VBoxContainer/ScrollContainer/prosList"]
margin_left = 236.0
margin_top = 36.0
margin_right = 364.0
margin_bottom = 68.0
rect_min_size = Vector2( 128, 32 )
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Add more"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 327.0
margin_right = 612.0
margin_bottom = 639.0
alignment = 1

[node name="ConsOfXY" type="Label" parent="VBoxContainer2"]
margin_right = 612.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cons of X"
align = 1
valign = 1
clip_text = true

[node name="simpleInstructions" parent="VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 40.0
margin_bottom = 58.0

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer2"]
margin_top = 62.0
margin_right = 612.0
margin_bottom = 312.0
rect_min_size = Vector2( 600, 250 )
scroll_horizontal_enabled = false

[node name="consList" type="VBoxContainer" parent="VBoxContainer2/ScrollContainer2"]
margin_right = 600.0
margin_bottom = 250.0
rect_min_size = Vector2( 600, 250 )

[node name="labelPiece" parent="VBoxContainer2/ScrollContainer2/consList" instance=ExtResource( 3 )]
margin_bottom = 32.0

[node name="addMoreCons" type="Button" parent="VBoxContainer2/ScrollContainer2/consList"]
margin_left = 236.0
margin_top = 36.0
margin_right = 364.0
margin_bottom = 68.0
rect_min_size = Vector2( 128, 32 )
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Add more"

[node name="FinalAmt" type="Label" parent="."]
margin_top = 644.0
margin_right = 612.0
margin_bottom = 668.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Waiting for values"
align = 1
clip_text = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="pressed" from="VBoxContainer/ScrollContainer/prosList/addMoreBtnPros" to="." method="_on_addMoreBtnPros_pressed"]
[connection signal="pressed" from="VBoxContainer2/ScrollContainer2/consList/addMoreCons" to="." method="_on_addMoreCons_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
